Updated feature X and fixed bug Y

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 /* Global Styles */
 body {
   font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  background-image: url('./682670.jpg');
+  background-image: url('./GOT.jpg');
   background-size: cover;
   background-position: center;
   margin: 0;
